force-app/main/default/objects/VCC_Appointment_Utilization__c/VCC_Appointment_Utilization__c.object-meta.xml
<CustomObject>
    <description>Created as a storage location for Historic/ Future Appointment Utilization</description>
    <label>Appointment Utilization</label>
    <nameField>
        <displayFormat>AU-{0000000}</displayFormat>
        <label>Appointment Utilization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Utilization Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>