force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Count_of_Used_Appointment_Slots__c.field-meta.xml
<CustomField>
    <fullName>VCC_Count_of_Used_Appointment_Slots__c</fullName>
    <description>Displays number of used Provider slots for a Shift</description>
    <label>Count of Used Appointment Slots</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>