force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>VCC_Day_of_Week__c</fullName>
    <description>Used to store a day value (Monday - Sunday) for the corresponding date.</description>
    <formula>CASE( WEEKDAY(VCC_Date__c),

1, &quot;Sunday&quot;,

2, &quot;Monday&quot;,

3, &quot;Tuesday&quot;,

4, &quot;Wednesday&quot;,

5, &quot;Thursday&quot;,

6, &quot;Friday&quot;,

7, &quot;Saturday&quot;,

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>