force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Gross_Utilized_Slots__c.field-meta.xml
<CustomField>
    <fullName>VCC_Gross_Utilized_Slots__c</fullName>
    <description>Number of Slots that were actually utilized either through a Provider seeing a patient or due to the patient cancelling after the appointment was scheduled to start.</description>
    <inlineHelpText>Number of Slots that were actually utilized either through a Provider seeing a patient or due to the patient cancelling after the appointment was scheduled to start.</inlineHelpText>
    <label>Gross Utilized Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>