force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Is_My_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_My_VISN__c</fullName>
    <description>Returns true if the user&apos;s VISN equals the VISN on the appointment record.</description>
    <formula>IF(VCC_Service_Territory__r.Name = $User.Division, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My VISN</label>
    <type>Checkbox</type>
</CustomField>