force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Net_Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>VCC_Net_Available_Slots__c</fullName>
    <description>The total available slots that can be used for calculating utilization. Determined by the Providers Shifts at a location Minus their Scheduled appointments, absences and holidays.</description>
    <label>Net Available Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>