force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Net_Scheduled_Slots__c.field-meta.xml
<CustomField>
    <fullName>VCC_Net_Scheduled_Slots__c</fullName>
    <description>The total number of scheduled slots regardless of whether they were cancelled or completed.</description>
    <label>Net Scheduled Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>