force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>VCC_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Medical Provider seeing the patient</description>
    <label>Provider Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>