force-app/main/default/objects/VCC_Appointment_Utilization__c/fields/VCC_Scheduled_Utilization_Percent__c.field-meta.xml
<CustomField>
    <fullName>VCC_Scheduled_Utilization_Percent__c</fullName>
    <description>Utilization percentage derived from the number of slots a provider is Scheduled at a VISN divided by the total number of Slots they were available.</description>
    <formula>VCC_Net_Scheduled_Slots__c/VCC_Net_Available_Slots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Utilization percentage derived from the number of slots a provider is Scheduled at a VISN divided by the total number of Slots they were available.</inlineHelpText>
    <label>Scheduled Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>