force-app/main/default/objects/VCC_Appointment_Utilization__c/recordTypes/Weekly.recordType-meta.xml
<RecordType>
    <fullName>Weekly</fullName>
    <active>true</active>
    <description>Weekly time scale for progressive data resolution for reporting on appointment utilization</description>
    <label>Weekly</label>
</RecordType>