force-app/main/default/objects/VCC_Appointment_Utilization__c/recordTypes/Yearly.recordType-meta.xml
<RecordType>
    <fullName>Yearly</fullName>
    <active>true</active>
    <description>Yearly time scale for progressive data resolution for reporting on appointment utilization</description>
    <label>Yearly</label>
</RecordType>