force-app/main/default/objects/VCC_Appointment_Utilization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_Date__c</columns>
    <columns>VCC_Service_Resource__c</columns>
    <columns>VCC_Service_Territory__c</columns>
    <columns>VCC_Scheduled_Utilization_Percent__c</columns>
    <columns>VCC_Actual_Utilization_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>